<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Droid Web Inspector</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="font_fontFamily_medium">sans-serif-medium</string>
    <string name="instabug_audio_recorder_permission_denied">Audio recording permission denied</string>
    <string name="instabug_err_invalid_comment">Please enter a valid comment</string>
    <string name="instabug_err_invalid_email">Please enter a valid email</string>
    <string name="instabug_err_invalid_extra_field">Missing Data: %1$s is required!</string>
    <string name="instabug_external_storage_permission_denied">Storage permission denied</string>
    <string name="instabug_str_action_submit">Submit</string>
    <string name="instabug_str_actual_results">Actual Results</string>
    <string name="instabug_str_add_photo">Select Image from Gallery</string>
    <string name="instabug_str_alert_message_max_attachments">Remove an existing attachment to add a new one.</string>
    <string name="instabug_str_alert_title_max_attachments">Cannot Add Attachment</string>
    <string name="instabug_str_annotate">Draw on screenshot</string>
    <string name="instabug_str_audio">Audio</string>
    <string name="instabug_str_bug_comment_hint">What went wrong?</string>
    <string name="instabug_str_bug_header">Report a Problem</string>
    <string name="instabug_str_cancel">Cancel</string>
    <string name="instabug_str_conversations">Conversations</string>
    <string name="instabug_str_dialog_message_preparing">Preparing…</string>
    <string name="instabug_str_dismiss">Dismiss</string>
    <string name="instabug_str_email_hint">Enter your email</string>
    <string name="instabug_str_empty" />
    <string name="instabug_str_error_survey_without_answer">Survey cannot be submitted without an answer.</string>
    <string name="instabug_str_expected_results">Expected Results</string>
    <string name="instabug_str_feedback_comment_hint">How can we improve?</string>
    <string name="instabug_str_feedback_header">Suggest an Improvement</string>
    <string name="instabug_str_hint_enter_your_answer">Enter your answer</string>
    <string name="instabug_str_hold_to_record">Press and Hold to Record</string>
    <string name="instabug_str_image">Image</string>
    <string name="instabug_str_image_loading_error">Couldn\'t load image</string>
    <string name="instabug_str_invocation_dialog_title">How can we help you?</string>
    <string name="instabug_str_messages">Messages</string>
    <string name="instabug_str_notification_title">%1$s Team</string>
    <string name="instabug_str_notifications_body">%1$d new messages from %2$s and others</string>
    <string name="instabug_str_ok">OK</string>
    <string name="instabug_str_please_wait">Please wait a moment</string>
    <string name="instabug_str_plus">+</string>
    <string name="instabug_str_powered_by_instabug">Powered by Instabug</string>
    <string name="instabug_str_record_video">Take a screen recording</string>
    <string name="instabug_str_release_stop_record">Release to Attach</string>
    <string name="instabug_str_reply">Reply</string>
    <string name="instabug_str_sending_message_hint">Type your message</string>
    <string name="instabug_str_shake_hint">We love to hear your feedback&lt;br/&gt;&lt;b&gt;Shake&lt;/b&gt; your device to talk to us.</string>
    <string name="instabug_str_steps_to_reproduce">Steps to Reproduce</string>
    <string name="instabug_str_success_note">We\'ve received your feedback.\nThank you for helping us make %s better.</string>
    <string name="instabug_str_survey_counter" formatted="false">%d of %d</string>
    <string name="instabug_str_survey_next">Next</string>
    <string name="instabug_str_survey_thanks">Thanks!</string>
    <string name="instabug_str_survey_thanks_msg">Your feedback is successfully submitted</string>
    <string name="instabug_str_swipe_hint">We love to hear your feedback&lt;br /&gt;&lt;b&gt;Swipe with 2 fingers&lt;/b&gt; to talk to us.</string>
    <string name="instabug_str_take_screenshot">Take a Screenshot</string>
    <string name="instabug_str_take_survey">Take The Survey</string>
    <string name="instabug_str_talk_to_us">Talk to us</string>
    <string name="instabug_str_thank_you">Thank You</string>
    <string name="instabug_str_video">Video</string>
    <string name="instabug_str_video_encoder_busy">Video Encoder is busy encoding other video</string>
    <string name="instabug_str_video_encoding_error">Couldn\'t encode video due to low memory</string>
    <string name="instabug_str_video_player">Video Player</string>
    <string name="instabug_str_video_recording_hint">Press record when ready</string>
    <string name="instabug_str_welcome_feedback">Your feedback is highly appreciated.</string>
    <string name="instabug_str_welcome_feedback_msg">We would appreciate you taking the time to complete the following survey.</string>
    <string name="leaset_likely">0-Least Likely</string>
    <string name="most_likely">10-Most Likely</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
