<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_gravity="center"
    android:orientation="vertical"
    android:id="@+id/instabug_dialog_survey_container"
    android:background="?attr/survey_container_bg"
    android:paddingLeft="24dp"
    android:paddingTop="32dp"
    android:paddingRight="24dp"
    android:paddingBottom="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/instabug_survey_welcome_dialog_padding_left_right"
    android:layout_marginRight="@dimen/instabug_survey_welcome_dialog_padding_left_right">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="?attr/instabug_background_color"
        android:paddingBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="?attr/instabug_survey_welcome_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instabug_str_welcome_feedback"
            style="@style/InstabugSurveyDialogQuestion"/>
        <TextView
            android:textSize="13sp"
            android:textColor="?attr/instabug_survey_welcome_msg_color"
            android:gravity="center"
            android:id="@+id/ib_welcome_survey_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="1dp"
            android:text="@string/instabug_str_welcome_feedback_msg"
            android:lineSpacingExtra="6dp"/>
        <Button
            android:textSize="@dimen/instabug_button_text_size"
            android:id="@+id/ib_welcome_survey_take_survey"
            android:background="?attr/instabug_primary_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/instabug_str_take_survey"/>
        <Button
            android:textSize="@dimen/instabug_button_text_size"
            android:textColor="?attr/instabug_survey_welcome_dismiss_txt_color"
            android:layout_gravity="center_horizontal"
            android:id="@+id/ib_welcome_survey_dismiss"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="24dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/instabug_str_dismiss"/>
    </LinearLayout>
    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/instabug_lyt_pbi"/>
</LinearLayout>
